--- a/relogio.css
+++ b/relogio.css
@@ -1,6 +1,7 @@
 body{
 background-color: black;
 color: #FF5F1F;
+text-shadow: 2px 2px 2px rgba(68, 66, 66, 0.47);
 }
 #pai{
     text-align: center;
@@ -28,6 +29,7 @@ color: #FF5F1F;
     justify-content: center;
 }
 #btn-Ocultar, #btn-Mostrar{
+    text-shadow: 2px 2px 2px rgba(68, 66, 66, 0.671);
     border-radius: 12px;
     width: 20%;
     font-size: 18px;
