--- a/relogio.css
+++ b/relogio.css
@@ -1,7 +1,7 @@
 body{
-background-color: black;
-color: #FF5F1F;
-text-shadow: 2px 2px 2px rgba(68, 66, 66, 0.47);
+    background-color: black;
+    color: #FF5F1F;
+    text-shadow: 2px 2px 2px rgba(68, 66, 66, 0.47);
 }
 #pai{
     text-align: center;
@@ -21,7 +21,51 @@ text-shadow: 2px 2px 2px rgba(68, 66, 66, 0.47);
     font-weight: bold;
 }
 #PaiFuso {
-    display: inline-block;
+    gap: 10px;
+    width: 100%;
+    padding: 20px 15px 20px;
+}
+.corpo, .titulos, .horario, .diferençaH{
+    width: 78%;
+}
+.titulos{
+    font-size: 20px;
+    padding: 15px 20px 20px;
+    height: 19px;
+}
+.cidade{
+    float: left;
+    width: 40%;
+    height: 19px;
+}
+.trocar {
+    text-align: center;
+    float: right;
+    width: 30%;
+}
+.corpo{
+    border-top: 1px solid white;
+    padding-top: 5px;
+    text-align: center;
+    height: 73px;
+    padding: 15px 20px 20px;
+}
+.horario{
+    font-family: "Clockicons", Helvetica, sans-serif;
+    font-size: 32px;
+    height: 47px;
+}
+.diferençaH{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
+    height: 25px;
+}
+.Div-Filho {
+    margin: 0px 20px;
+    font-size: 20px;
+    height: 164px;
+    width: 20%;
+    background-color: rgb(39, 39, 39);
 }
 #div-btn{
     width: 100%;
